# flutter_vlc_player

flutter_vlc_player/: THUMBNAIL_FEATURE.md  pubspec.yaml
flutter_vlc_player/android/: build.gradle
flutter_vlc_player/android/src/main/cpp/: CMakeLists.txt  thumbnail_jni.c
flutter_vlc_player/android/src/main/java/software/solid/fluttervlcplayer/: FlutterVlcPlayerPlugin.java  Messages.java  ThumbnailMethodChannelHandler.java
flutter_vlc_player/example/: pubspec.yaml
flutter_vlc_player/example/lib/: android_thumbnail_test.dart  app.dart  multiple_tab.dart  single_tab.dart  thumbnail_example.dart
flutter_vlc_player/ios/: flutter_vlc_player.podspec
flutter_vlc_player/ios/Classes/: Messages.swift  SwiftFlutterVlcPlayerPlugin.swift  VlcViewBuilder.swift  VlcViewController.swift
flutter_vlc_player/lib/: flutter_vlc_player.dart
flutter_vlc_player/lib/src/: vlc_player_controller.dart
flutter_vlc_player/pigeons/: messages.dart
flutter_vlc_player_platform_interface/: .gitignore
flutter_vlc_player_platform_interface/lib/src/messages/: messages.dart
flutter_vlc_player_platform_interface/lib/src/method_channel/: method_channel_vlc_player.dart
flutter_vlc_player_platform_interface/lib/src/platform_interface/: vlc_player_platform_interface.dart
